simplify binary search trees and test them being well-formed